Fix contrast issues on datatable buttons

--- a/stylesheets/_component.datatables.scss
+++ b/stylesheets/_component.datatables.scss
@@ -62,7 +62,7 @@ a.dt-button {
     background-color: transparent;
     border: 0;
     border-right: 1px solid color(border);
-    color: color(jadu-blue, dark);
+    color: color(link);
     margin-right: $margin-base-vertical;
     padding: 0 $padding-base-horizontal;
 
